--- a/QQService.cls
+++ b/QQService.cls
@@ -89,6 +89,8 @@ Option Explicit
   Private cookieMng As New VB_Cookie
   
   '第一步，预先获得
+  Private uin As String
+  Private password As String
   Private clientid As String
   '一级登录获得
   Private ptwebqq As String
@@ -96,6 +98,7 @@ Option Explicit
   '二级登录获得的数据
   Private psessionid As String
   Private vfwebqq As String
+  
 '------------------------------------------------------------------------------
 '       属性变量
 '------------------------------------------------------------------------------
@@ -207,7 +210,7 @@ End Function
 '//      公有方法
 '//
 '//////////////////////////////////////////////////////////////////////////////
-Public Sub Login(ByVal qq As String, ByVal password As String, ByRef pictureBox As pictureBox)
+Public Sub Login(ByVal QQ As String, ByVal password As String, ByRef pictureBox As pictureBox)
   Dim WinHttp As WinHttp.WinHttpRequest '声明一个对象
   
   Dim Verify_Code_Url As String
@@ -224,7 +227,9 @@ Public Sub Login(ByVal qq As String, ByVal password As String, ByRef pictureBox 
   
   'step 3
   Dim r As String
+  Dim json As Variant
   
+  uin = QQ
   Set WinHttp = CreateObject("WinHttp.WinHttpRequest.5.1")
   'get client id
 
@@ -247,7 +252,7 @@ Public Sub Login(ByVal qq As String, ByVal password As String, ByRef pictureBox 
   'https://ssl.ptlogin2.qq.com/check?pt_tea=1&uin=[QQNumber]&appid=501004106&js_ver=10034&js_type=0&login_sig=&u1=http%3A%2F%2Fw.qq.com%2Fproxy.html&r=0.23477151861080792
   '【第一步：检测验证码】
   Verify_Code_Url = "https://ssl.ptlogin2.qq.com/check?pt_tea=1&uin=[QQNumber]&appid=501004106&js_ver=10034&js_type=0&login_sig=&u1=http%3A%2F%2Fw.qq.com%2Fproxy.html&r=0.23477151861080792"
-  Verify_Code_Url = Replace(Verify_Code_Url, "[QQNumber]", qq)
+  Verify_Code_Url = Replace(Verify_Code_Url, "[QQNumber]", QQ)
   WinHttp.Open "GET", Verify_Code_Url, True
   WinHttp.SetTimeouts 30000, 30000, 30000, 30000
   WinHttp.SetRequestHeader "Host", "ssl.ptlogin2.qq.com"
@@ -270,10 +275,10 @@ Public Sub Login(ByVal qq As String, ByVal password As String, ByRef pictureBox 
   jsExec.Reset
   VerifySession = tmpArr(7)
   'ready js calculation
-  jsCode = fileOpr.ReadTextFile(App.path & "\encrypt1.js")
+  jsCode = fileOpr.ReadTextFile(App.path & "\script\encrypt1.js")
   jsExec.AddCode jsCode
   
-  user = qq
+  user = QQ
   pass = jsExec.Run("getEncryption", password, Salt, VerifyCode)
   '【第二步：一级登录】
   Login_Url = "https://ssl.ptlogin2.qq.com/login?u=" & user
@@ -349,45 +354,60 @@ Public Sub Login(ByVal qq As String, ByVal password As String, ByRef pictureBox 
   'cookies add
   cookieMng.AddCookiesFromHeaders responseHeaders
   lastCookies = cookieMng.cookieString()
+  'loadjs
+  jsExec.Reset
+  jsExec.AddCode "function getData() { return " & responseBody & ";}"
+  Set json = jsExec.Run("getData")
+  If json.retcode = 0 Then
+    psessionid = json.result.psessionid
+    vfwebqq = json.result.vfwebqq
+  End If
+  MsgBox "ok"
+End Sub
+'获取好友列表
+Public Function getFriends() As VB_QQ_Friend()
+  'hash
+  Dim hash As String
+  Dim hashJS As String
+  Dim r As String
+  Dim json As Variant
   
-  Exit Sub
-End Sub
-
-Public Sub SignTieBa(ByRef showList As ListBox, ByRef sourceList As ListBox)
-  Dim tiebaName As String
-  Dim b As Integer
-  For b = 1 To UBound(tieba)
-    tiebaName = tieba(b)
-    If Not sourceList Is Nothing Then
-      sourceList.ListIndex = b - 1
-    End If
-    
-    '-----------------------------------------------------------------
-    WinHttp.Open "GET", "http://tieba.baidu.com/mo/q/sign?tbs=" & tbs & "&kw=" & tiebaName & "&is_like=1&fid=1177", True
-    WinHttp.SetTimeouts 30000, 30000, 30000, 30000
-    WinHttp.SetRequestHeader "Host", "tieba.baidu.com"
-    WinHttp.SetRequestHeader "Connection", "keep-alive"
-    WinHttp.SetRequestHeader "Accept", "application/json"
-    WinHttp.SetRequestHeader "X-Requested-With", "XMLHttpRequest"
-    WinHttp.SetRequestHeader "User-Agent", "Mozilla/5.0 (iPhone; U; CPU iPhone OS 4_2_1 like Mac OS X; en-us) AppleWebKit/533.17.9 (KHTML, like Gecko) Version/5.0.2 Mobile/8C148 Safari/6533.18.5"
-    WinHttp.SetRequestHeader "Referer", "http://tieba.baidu.com/f?kw=" & tiebaName & "&pn=0&"
-    WinHttp.SetRequestHeader "Accept-Language", "zh-CN,zh;q=0.8"
-    WinHttp.SetRequestHeader "Cookie", "BAIDUID=" & baiduId & "; BDUSS=" & BDUSS & "; IS_NEW_USER=" & IS_NEW_USER & "; BAIDU_WISE_UID=" & BAIDU_WISE_UID & "; TIEBAUID=" & TIEBAUID & "; CLIENTWIDTH=320; CLIENTHEIGHT=480; SEENKW=vb; mo_originid=2; LASW=320; is_hide_sign_like_client_ad_dialog=true"
-    WinHttp.Send            '发送
-    WinHttp.WaitForResponse '异步发送
-    responseBody = BytesToBstr(WinHttp.responseBody, "utf-8")
-    responseHeaders = WinHttp.GetAllResponseHeaders
-    If InStr(responseBody, "{" & Chr(34) & "no" & Chr(34) & ":0," & Chr(34) & "error") > 0 Then
-      showList.AddItem Now & " " & tiebaName & " " & "签到成功！": showList.ListIndex = showList.ListCount - 1
-    Else
-      If InStr(responseBody, "\u4eb2\uff0c\u4f60\u4e4b\u524d\u5df2\u7ecf\u7b7e\u8fc7\u4e86") > 0 Then
-        showList.AddItem Now & " " & tiebaName & " " & "签到失败！重复签到。": showList.ListIndex = showList.ListCount - 1
-      Else
-        showList.AddItem Now & " " & tiebaName & " " & "签到失败！原因未知。": showList.ListIndex = showList.ListCount - 1
-      End If
-    End If
-    '-----------------------------------------------------------------签到
-    DoEvents
-  Next b
-End Sub
+  hashJS = fileOpr.ReadTextFile(App.path & "\script\hash.js")
+  jsExec.Reset
+  jsExec.AddCode hashJS
+  hash = jsExec.Run("hash", uin, ptwebqq)
+  r = "{""vfwebqq"":""" & vfwebqq & """"
+  r = r & ",""hash"":""" & hash & """}"
+  r = UrlEncode(r)
+  WinHttp.Open "POST", "http://s.web2.qq.com/api/get_user_friends2", True
+  WinHttp.SetTimeouts 30000, 30000, 30000, 30000
+  WinHttp.SetRequestHeader "Host", "s.web2.qq.com"
+  WinHttp.SetRequestHeader "Connection", "keep-alive"
+  WinHttp.SetRequestHeader "Accept", "*/*"
+  WinHttp.SetRequestHeader "User-Agent", "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/43.0.2357.130 Safari/537.36"
+  WinHttp.SetRequestHeader "Accept-Language", "zh-CN,zh;q=0.8"
+  WinHttp.SetRequestHeader "Content-Type", "application/x-www-form-urlencoded"
+  WinHttp.SetRequestHeader "Content-Length", LenB(r)
+  'Content-Length: 180
+  WinHttp.SetRequestHeader "Referer", "http://s.web2.qq.com/proxy.html?v=20130916001&callback=1&id=1"
+  'lastCookies = lastCookies & ";p_skey=" & cookieMng.getCookie("p_skey").value
+  WinHttp.SetRequestHeader "Cookie", lastCookies
+  WinHttp.Send "r=" & r            '发送
+  'Referer: http://d.web2.qq.com/proxy.html?v=20130916001&callback=1&id=2
+  WinHttp.WaitForResponse '异步发送
+  responseBody = BytesToBstr(WinHttp.responseBody, "UTF-8")
+  responseHeaders = WinHttp.GetAllResponseHeaders
+  'cookies add
+  cookieMng.AddCookiesFromHeaders responseHeaders
+  lastCookies = cookieMng.cookieString()
+  'loadjs
+  jsExec.Reset
+  jsExec.AddCode "function getData() { return " & responseBody & ";}"
+  Set json = jsExec.Run("getData")
+  If json.retcode = 0 Then
+    jsExec.Reset
+    jsExec.AddCode fileOpr.ReadTextFile(App.path & "\script\friends.analyse.js")
+    Set json = jsExec.Run("analyse_friends", responseBody)
+  End If
+End Function
 
